# diffseek

./: .gitignore  README.md  diffseek.py  pyproject.toml  test_diffseek.py
